syz-cluster: switch away from bitnami/git
The image is to be deprecated.

Closes #6350.

--- a/syz-cluster/workflow/build-step/workflow-template.yaml
+++ b/syz-cluster/workflow/build-step/workflow-template.yaml
@@ -24,7 +24,7 @@ spec:
             path: /tmp/request.json
       initContainers:
       - name: setup-overlays
-        image: bitnami/git:latest
+        image: alpine/git:latest
         imagePullPolicy: IfNotPresent
         command:
           - sh
