syz-cluster: switch qemus to q35
KMSAN fails to boot when a specific q35 version is specified.

--- a/syz-cluster/workflow/configs/net/base.cfg
+++ b/syz-cluster/workflow/configs/net/base.cfg
@@ -35,6 +35,6 @@
       "kernel": "/base/kernel",
       "cpu": 2,
       "mem": 7168,
-      "qemu_args": "-machine pc-q35-7.1 -enable-kvm -smp 2,sockets=2,cores=1"
+      "qemu_args": "-machine q35 -enable-kvm -smp 2,sockets=2,cores=1"
     }
 }
