--- a/syz-cluster/workflow/configs/io-uring/base.cfg
+++ b/syz-cluster/workflow/configs/io-uring/base.cfg
@@ -22,6 +22,6 @@
       "kernel": "/base/kernel",
       "cpu": 2,
       "mem": 7168,
-      "qemu_args": "-machine pc-q35-7.1 -enable-kvm -smp 2,sockets=2,cores=1"
+      "qemu_args": "-machine q35 -enable-kvm -smp 2,sockets=2,cores=1"
     }
 }
