--- a/dashboard/config/linux/bits/net.yml
+++ b/dashboard/config/linux/bits/net.yml
@@ -19,6 +19,10 @@ config:
  - XFRM_USER_COMPAT: [v5.10, x86_64]
  - NET_KEY
  - NET_KEY_MIGRATE
+ # SMC requires DIBS (Direct Internal Buffer Sharing).
+ - DIBS: [linux-next]
+ # DIBS_LO enables the creation of HW independent testing client.
+ - DIBS_LO: [linux-next]
  - SMC
  - SMC_DIAG
  - XDP_SOCKETS
@@ -100,6 +104,8 @@ config:
  - NETFILTER_ADVANCED
  - NETFILTER_XTABLES
  - NETFILTER_XTABLES_COMPAT: [v5.15, -arm]
+ # Required since "netfilter: Exclude LEGACY TABLES on PREEMPT_RT"
+ - NETFILTER_XTABLES_LEGACY: [v6.17, -preempt_rt]
  - NF_CONNTRACK
  - NF_LOG_NETDEV: [-v5.13]
  - NETWORK_SECMARK
@@ -129,6 +135,7 @@ config:
  - NF_TABLES_NETDEV
  - NFT_NUMGEN
  - NFT_CT
+ - NFT_EXTHDR_DCCP: [v6.17]
  - NFT_FLOW_OFFLOAD
  - NFT_COUNTER: [-v5.17]
  - NFT_CONNLIMIT
@@ -166,13 +173,14 @@ config:
  - NETFILTER_XT_TARGET_IDLETIMER
  - NETFILTER_XT_TARGET_LED
  - NETFILTER_XT_TARGET_LOG
+ - NETFILTER_XT_NAT
  - NETFILTER_XT_TARGET_MARK
  - NETFILTER_XT_TARGET_NFLOG
  - NETFILTER_XT_TARGET_NFQUEUE
- - NETFILTER_XT_TARGET_NOTRACK
+ - NETFILTER_XT_TARGET_NOTRACK: [-preempt_rt]
  - NETFILTER_XT_TARGET_TEE
  - NETFILTER_XT_TARGET_TPROXY
- - NETFILTER_XT_TARGET_TRACE
+ - NETFILTER_XT_TARGET_TRACE: [-preempt_rt]
  - NETFILTER_XT_TARGET_SECMARK
  - NETFILTER_XT_TARGET_TCPMSS
  - NETFILTER_XT_TARGET_TCPOPTSTRIP
@@ -222,30 +230,34 @@ config:
  - NF_FLOW_TABLE_IPV4: [-v5.17]
  - NF_LOG_ARP
  - IP_NF_IPTABLES
+ # Requires since "netfilter: Exclude LEGACY TABLES on PREEMPT_RT".
+ - IP_NF_IPTABLES_LEGACY: [v6.17, -preempt_rt]
  - IP_NF_MATCH_AH
  - IP_NF_MATCH_ECN
  - IP_NF_MATCH_RPFILTER
  - IP_NF_MATCH_TTL
- - IP_NF_FILTER
+ - IP_NF_FILTER: [-preempt_rt]
  - IP_NF_TARGET_REJECT
  - IP_NF_TARGET_SYNPROXY
- - IP_NF_NAT
- - IP_NF_TARGET_MASQUERADE
- - IP_NF_TARGET_NETMAP
- - IP_NF_TARGET_REDIRECT
- - IP_NF_MANGLE
+ - IP_NF_NAT: [-preempt_rt]
+ - IP_NF_TARGET_MASQUERADE: [-preempt_rt]
+ - IP_NF_TARGET_NETMAP: [-preempt_rt]
+ - IP_NF_TARGET_REDIRECT: [-preempt_rt]
+ - IP_NF_MANGLE: [-preempt_rt]
  - IP_NF_TARGET_CLUSTERIP: [-v6.3]
  - IP_NF_TARGET_ECN
- - IP_NF_TARGET_TTL
- - IP_NF_RAW
- - IP_NF_SECURITY
- - IP_NF_ARPTABLES
- - IP_NF_ARPFILTER
+ - IP_NF_TARGET_TTL: [-preempt_rt]
+ - IP_NF_RAW: [-preempt_rt]
+ - IP_NF_SECURITY: [-preempt_rt]
+ - IP_NF_ARPTABLES: [-preempt_rt]
+ - IP_NF_ARPFILTER: [-preempt_rt]
  - IP_NF_ARP_MANGLE
  - NFT_DUP_IPV6
  - NFT_FIB_IPV6
  - NF_FLOW_TABLE_IPV6: [-v5.17]
  - IP6_NF_IPTABLES
+ # Requires since "netfilter: Exclude LEGACY TABLES on PREEMPT_RT".
+ - IP6_NF_IPTABLES_LEGACY: [v6.17, -preempt_rt]
  - IP6_NF_MATCH_AH
  - IP6_NF_MATCH_EUI64
  - IP6_NF_MATCH_FRAG
@@ -256,15 +268,15 @@ config:
  - IP6_NF_MATCH_RPFILTER
  - IP6_NF_MATCH_RT
  - IP6_NF_MATCH_SRH
- - IP6_NF_TARGET_HL
- - IP6_NF_FILTER
+ - IP6_NF_TARGET_HL: [-preempt_rt]
+ - IP6_NF_FILTER: [-preempt_rt]
  - IP6_NF_TARGET_REJECT
  - IP6_NF_TARGET_SYNPROXY
- - IP6_NF_MANGLE
- - IP6_NF_RAW
- - IP6_NF_SECURITY
- - IP6_NF_NAT
- - IP6_NF_TARGET_MASQUERADE
+ - IP6_NF_MANGLE: [-preempt_rt]
+ - IP6_NF_RAW: [-preempt_rt]
+ - IP6_NF_SECURITY: [-preempt_rt]
+ - IP6_NF_NAT: [-preempt_rt]
+ - IP6_NF_TARGET_MASQUERADE: [-preempt_rt]
  - IP6_NF_TARGET_NPT
  - NETLABEL
  - RDS
