--- a/dashboard/config/linux/stable-6.1-kasan.config
+++ b/dashboard/config/linux/stable-6.1-kasan.config
@@ -3,7 +3,7 @@
 
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86_64 6.1.106 Kernel Configuration
+# Linux/x86_64 syzkaller Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="Debian clang version 20.1.7 (++20250616065708+6146a88f6049-1~exp1~20250616065826.132)"
 CONFIG_GCC_VERSION=0
