syz-cluster: regenerate fuzz config tests
After kfuzztest has been merged, the configs have become a little big
bigger.

Regenerate them in a separate commit to reduce noise in further commits.

--- a/syz-cluster/pkg/fuzzconfig/testdata/singular/bpf.patched.cfg
+++ b/syz-cluster/pkg/fuzzconfig/testdata/singular/bpf.patched.cfg
@@ -69,6 +69,7 @@
 		"reset_acc_state": false,
 		"remote_cover": true,
 		"cover_edges": false,
-		"descriptions_mode": "manual"
+		"descriptions_mode": "manual",
+		"enable_kfuzztest": false
 	}
 }
