--- a/dashboard/config/linux/bits/rust.yml
+++ b/dashboard/config/linux/bits/rust.yml
@@ -9,3 +9,5 @@ config:
   - BLK_DEV_RUST_NULL
   - RUST_DEBUG_ASSERTIONS
   - RUST_OVERFLOW_CHECKS
+  - RUST_BITMAP_HARDENED: [v6.18]
+  - RUST_BUILD_ASSERT_ALLOW: [v6.18]
