--- a/dashboard/config/linux/bits/subsystems.yml
+++ b/dashboard/config/linux/bits/subsystems.yml
@@ -368,6 +368,7 @@ config:
  - SND_FIREWIRE_TASCAM: n
  - HID_BATTERY_STRENGTH: [-s390]
  - HIDRAW: [-s390]
+ - HID_HAPTIC: [v6.18]
  - UHID: [-s390]
  - USB_HIDDEV: [-s390]
  - USB_ANNOUNCE_NEW_DEVICES
@@ -385,6 +386,7 @@ config:
  - USB_UAS
  - USB_DWC3
  - USB_DWC3_GADGET
+ - USB_DWC3_GENERIC_PLAT: [v6.18]
  - USB_CHIPIDEA
  - USB_CHIPIDEA_UDC
  - USB_SERIAL
