--- a/syz-cluster/workflow/triage-step/workflow-template.yaml
+++ b/syz-cluster/workflow/triage-step/workflow-template.yaml
@@ -8,6 +8,10 @@ metadata:
 spec:
   templates:
     - name: triage-step
+      retryStrategy:
+        limit: "3"
+        backoff:
+          duration: "5m"
       initContainers:
         - name: setup-overlays
           image: alpine/git:latest
