dashboard: regenerate Linux configs
Disable rust by default for all instance, only enabling it where it's specified.

--- a/dashboard/config/linux/bits/rust.yml
+++ b/dashboard/config/linux/bits/rust.yml
@@ -2,7 +2,7 @@
 # Use of this source code is governed by Apache 2 LICENSE that can be found in the LICENSE file.
 
 config:
-  - RUST
+  - RUST: [override]
   - GENDWARFKSYMS: [-baseline]
   - RUST_FW_LOADER_ABSTRACTIONS
   - RUST_PHYLIB_ABSTRACTIONS
