--- a/dashboard/config/linux/upstream-arm-full.config
+++ b/dashboard/config/linux/upstream-arm-full.config
@@ -283,9 +283,7 @@ CONFIG_PERF_EVENTS=y
 
 CONFIG_SYSTEM_DATA_VERIFICATION=y
 CONFIG_PROFILING=y
-CONFIG_RUST=y
-CONFIG_RUSTC_VERSION_TEXT="rustc 1.87.0 (17067e9ac 2025-05-09)"
-CONFIG_BINDGEN_VERSION_TEXT="bindgen 0.72.0"
+# CONFIG_RUST is not set
 CONFIG_TRACEPOINTS=y
 
 #
@@ -598,7 +596,6 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CPU frequency scaling drivers
 #
 # CONFIG_CPUFREQ_DT is not set
-# CONFIG_CPUFREQ_DT_RUST is not set
 # CONFIG_CPUFREQ_VIRT is not set
 # CONFIG_CPUFREQ_DT_PLATDEV is not set
 CONFIG_ARM_VEXPRESS_SPC_CPUFREQ=y
@@ -793,7 +790,7 @@ CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 # CONFIG_GENKSYMS is not set
 CONFIG_GENDWARFKSYMS=y
-CONFIG_EXTENDED_MODVERSIONS=y
+# CONFIG_EXTENDED_MODVERSIONS is not set
 # CONFIG_BASIC_MODVERSIONS is not set
 CONFIG_MODULE_SRCVERSION_ALL=y
 CONFIG_MODULE_SIG=y
@@ -2108,7 +2105,6 @@ CONFIG_PREVENT_FIRMWARE_BUILD=y
 #
 CONFIG_FW_LOADER=y
 # CONFIG_FW_LOADER_DEBUG is not set
-# CONFIG_RUST_FW_LOADER_ABSTRACTIONS is not set
 CONFIG_FW_LOADER_PAGED_BUF=y
 CONFIG_FW_LOADER_SYSFS=y
 CONFIG_EXTRA_FIRMWARE=""
@@ -2354,7 +2350,6 @@ CONFIG_PARPORT_NOT_PC=y
 CONFIG_BLK_DEV=y
 CONFIG_BLK_DEV_NULL_BLK=y
 CONFIG_BLK_DEV_NULL_BLK_FAULT_INJECTION=y
-# CONFIG_BLK_DEV_RUST_NULL is not set
 CONFIG_CDROM=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
 CONFIG_ZRAM=y
@@ -2966,7 +2961,6 @@ CONFIG_SWPHY=y
 # CONFIG_LED_TRIGGER_PHY is not set
 CONFIG_PHYLIB_LEDS=y
 CONFIG_FIXED_PHY=y
-# CONFIG_RUST_PHYLIB_ABSTRACTIONS is not set
 # CONFIG_SFP is not set
 
 #
@@ -5386,7 +5380,6 @@ CONFIG_DRM_SIMPLEDRM=y
 # CONFIG_DRM_RADEON is not set
 # CONFIG_DRM_AMDGPU is not set
 # CONFIG_DRM_NOUVEAU is not set
-# CONFIG_DRM_NOVA is not set
 # CONFIG_DRM_XE is not set
 CONFIG_DRM_VGEM=y
 CONFIG_DRM_VKMS=y
@@ -5522,7 +5515,6 @@ CONFIG_DRM_GUD=y
 # CONFIG_DRM_ST7586 is not set
 # CONFIG_DRM_ST7735R is not set
 # CONFIG_DRM_SSD130X is not set
-# CONFIG_DRM_TYR is not set
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=y
 
 #
@@ -8903,7 +8895,6 @@ CONFIG_HARDENED_USERCOPY=y
 # Hardening of kernel data structures
 #
 CONFIG_LIST_HARDENED=y
-# CONFIG_RUST_BITMAP_HARDENED is not set
 CONFIG_BUG_ON_DATA_CORRUPTION=y
 # end of Hardening of kernel data structures
 
@@ -9628,7 +9619,6 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_VMALLOC is not set
 # CONFIG_TEST_BPF is not set
 # CONFIG_FIND_BIT_BENCHMARK is not set
-# CONFIG_FIND_BIT_BENCHMARK_RUST is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_SYSCTL is not set
 # CONFIG_TEST_UDELAY is not set
@@ -9648,9 +9638,6 @@ CONFIG_ARCH_USE_MEMTEST=y
 #
 # Rust hacking
 #
-# CONFIG_RUST_DEBUG_ASSERTIONS is not set
-# CONFIG_RUST_OVERFLOW_CHECKS is not set
-# CONFIG_RUST_BUILD_ASSERT_ALLOW is not set
 # end of Rust hacking
 # end of Kernel hacking
 
