--- a/dashboard/config/linux/upstream-kcsan.config
+++ b/dashboard/config/linux/upstream-kcsan.config
@@ -298,9 +298,7 @@ CONFIG_PERF_EVENTS=y
 
 CONFIG_SYSTEM_DATA_VERIFICATION=y
 CONFIG_PROFILING=y
-CONFIG_RUST=y
-CONFIG_RUSTC_VERSION_TEXT="rustc 1.87.0 (17067e9ac 2025-05-09)"
-CONFIG_BINDGEN_VERSION_TEXT="bindgen 0.72.0"
+# CONFIG_RUST is not set
 CONFIG_TRACEPOINTS=y
 
 #
@@ -644,7 +642,6 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CPU frequency scaling drivers
 #
 # CONFIG_CPUFREQ_DT is not set
-# CONFIG_CPUFREQ_DT_RUST is not set
 # CONFIG_CPUFREQ_DT_PLATDEV is not set
 CONFIG_X86_INTEL_PSTATE=y
 # CONFIG_X86_PCC_CPUFREQ is not set
@@ -919,7 +916,7 @@ CONFIG_MODVERSIONS=y
 # CONFIG_GENKSYMS is not set
 CONFIG_GENDWARFKSYMS=y
 CONFIG_ASM_MODVERSIONS=y
-CONFIG_EXTENDED_MODVERSIONS=y
+# CONFIG_EXTENDED_MODVERSIONS is not set
 # CONFIG_BASIC_MODVERSIONS is not set
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 # CONFIG_MODULE_SIG is not set
@@ -2152,7 +2149,6 @@ CONFIG_PREVENT_FIRMWARE_BUILD=y
 # Firmware loader
 #
 CONFIG_FW_LOADER=y
-# CONFIG_RUST_FW_LOADER_ABSTRACTIONS is not set
 CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_FW_LOADER_USER_HELPER is not set
 # CONFIG_FW_LOADER_COMPRESS is not set
@@ -2258,7 +2254,6 @@ CONFIG_PNP_DEBUG_MESSAGES=y
 CONFIG_PNPACPI=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
-# CONFIG_BLK_DEV_RUST_NULL is not set
 # CONFIG_BLK_DEV_FD is not set
 CONFIG_CDROM=y
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
@@ -2813,7 +2808,6 @@ CONFIG_SWPHY=y
 # CONFIG_LED_TRIGGER_PHY is not set
 CONFIG_PHYLIB_LEDS=y
 CONFIG_FIXED_PHY=y
-# CONFIG_RUST_PHYLIB_ABSTRACTIONS is not set
 # CONFIG_SFP is not set
 
 #
@@ -5482,7 +5476,6 @@ CONFIG_DRM_GEM_SHMEM_HELPER=y
 # CONFIG_DRM_RADEON is not set
 # CONFIG_DRM_AMDGPU is not set
 # CONFIG_DRM_NOUVEAU is not set
-# CONFIG_DRM_NOVA is not set
 CONFIG_DRM_I915=y
 CONFIG_DRM_I915_FORCE_PROBE=""
 CONFIG_DRM_I915_CAPTURE_ERROR=y
@@ -8572,7 +8565,6 @@ CONFIG_USB4=y
 # Android
 #
 # CONFIG_ANDROID_BINDER_IPC is not set
-# CONFIG_ANDROID_BINDER_IPC_RUST is not set
 # end of Android
 
 # CONFIG_LIBNVDIMM is not set
@@ -8911,7 +8903,6 @@ CONFIG_HARDENED_USERCOPY=y
 # Hardening of kernel data structures
 #
 CONFIG_LIST_HARDENED=y
-# CONFIG_RUST_BITMAP_HARDENED is not set
 CONFIG_BUG_ON_DATA_CORRUPTION=y
 # end of Hardening of kernel data structures
 
@@ -9644,7 +9635,6 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_VMALLOC is not set
 # CONFIG_TEST_BPF is not set
 # CONFIG_FIND_BIT_BENCHMARK is not set
-# CONFIG_FIND_BIT_BENCHMARK_RUST is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_SYSCTL is not set
 # CONFIG_TEST_UDELAY is not set
@@ -9663,9 +9653,6 @@ CONFIG_ARCH_USE_MEMTEST=y
 #
 # Rust hacking
 #
-# CONFIG_RUST_DEBUG_ASSERTIONS is not set
-# CONFIG_RUST_OVERFLOW_CHECKS is not set
-# CONFIG_RUST_BUILD_ASSERT_ALLOW is not set
 # end of Rust hacking
 # end of Kernel hacking
 
