--- a/dashboard/config/linux/upstream-arm-kasan-base.config
+++ b/dashboard/config/linux/upstream-arm-kasan-base.config
@@ -3595,7 +3595,13 @@ CONFIG_FS_IOMAP=y
 CONFIG_BUFFER_HEAD=y
 CONFIG_EXT2_FS=y
 # CONFIG_EXT2_FS_XATTR is not set
-# CONFIG_EXT4_FS is not set
+CONFIG_EXT4_FS=y
+CONFIG_EXT4_FS_POSIX_ACL=y
+CONFIG_EXT4_FS_SECURITY=y
+# CONFIG_EXT4_DEBUG is not set
+CONFIG_JBD2=y
+# CONFIG_JBD2_DEBUG is not set
+CONFIG_FS_MBCACHE=y
 # CONFIG_JFS_FS is not set
 # CONFIG_XFS_FS is not set
 # CONFIG_GFS2_FS is not set
@@ -3603,6 +3609,7 @@ CONFIG_EXT2_FS=y
 # CONFIG_BTRFS_FS is not set
 # CONFIG_NILFS2_FS is not set
 # CONFIG_F2FS_FS is not set
+CONFIG_FS_POSIX_ACL=y
 CONFIG_EXPORTFS=y
 # CONFIG_EXPORTFS_BLOCK_OPS is not set
 CONFIG_FILE_LOCKING=y
@@ -4040,6 +4047,7 @@ CONFIG_GENERIC_NET_UTILS=y
 # CONFIG_PRIME_NUMBERS is not set
 CONFIG_RATIONAL=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
+CONFIG_CRC16=y
 CONFIG_CRC32=y
 CONFIG_CRC32_ARCH=y
 CONFIG_CRC_OPTIMIZATIONS=y
