--- a/dashboard/config/linux/upstream-arm64-kasan_sw-kcov-base.config
+++ b/dashboard/config/linux/upstream-arm64-kasan_sw-kcov-base.config
@@ -5587,7 +5587,14 @@ CONFIG_FS_IOMAP=y
 CONFIG_FS_STACK=y
 CONFIG_BUFFER_HEAD=y
 # CONFIG_EXT2_FS is not set
-# CONFIG_EXT4_FS is not set
+CONFIG_EXT4_FS=y
+CONFIG_EXT4_USE_FOR_EXT2=y
+CONFIG_EXT4_FS_POSIX_ACL=y
+CONFIG_EXT4_FS_SECURITY=y
+# CONFIG_EXT4_DEBUG is not set
+CONFIG_JBD2=y
+# CONFIG_JBD2_DEBUG is not set
+CONFIG_FS_MBCACHE=y
 # CONFIG_JFS_FS is not set
 # CONFIG_XFS_FS is not set
 # CONFIG_GFS2_FS is not set
