syz-cluster: preserve branches when cloning a repo
Remap remote branches to local ones both when polling remote
repositories and when cloning the distributed repository.

This will ensure that the branches are still accessible via
TreeName/BranchName (it got broken during the latest changes).

--- a/syz-cluster/workflow/build-step/workflow-template.yaml
+++ b/syz-cluster/workflow/build-step/workflow-template.yaml
@@ -37,7 +37,7 @@ spec:
           - sh
           - -c
           - |
-            git clone --reference /kernel-repo /kernel-repo ./workdir
+            git clone --reference /kernel-repo -c remote.origin.fetch="+refs/heads/*:refs/heads/*" /kernel-repo ./workdir
         env:
         - name: GIT_DISCOVERY_ACROSS_FILESYSTEM
           value: "1"
