--- a/syz-cluster/kernel-disk/fetch-kernels-template.yaml
+++ b/syz-cluster/kernel-disk/fetch-kernels-template.yaml
@@ -70,5 +70,5 @@ spec:
             echo "${NAME}: ${REPO}/${BRANCH}"
             git remote remove ${NAME} || true
             git remote add ${NAME} ${REPO}
-            git fetch ${NAME} ${BRANCH} --tags
+            git fetch ${NAME} ${BRANCH} --tags "+refs/heads/*:refs/heads/${NAME}/*" "+refs/tags/*:refs/tags/${NAME}/*"
             git tag -f ${NAME}-head ${NAME}/${BRANCH}
