dashboard/app: add support for AI workflows
Support for:
 - polling for AI jobs
 - handling completion of AI jobs
 - submitting job trajectory logs
 - basic visualization for AI jobs

--- a/dashboard/app/index.yaml
+++ b/dashboard/app/index.yaml
@@ -129,6 +129,12 @@ indexes:
   - name: Status
   - name: FixCandidateJob
 
+- kind: Bug
+  properties:
+  - name: Namespace
+  - name: Status
+  - name: AIJobCheck
+
 - kind: Build
   properties:
   - name: Namespace
