syz-cluster: log the tip of the polled branch
It will help better understand lags between the kernel revision used by
syz-cluster and the latest tree commit.

--- a/syz-cluster/kernel-disk/fetch-kernels-template.yaml
+++ b/syz-cluster/kernel-disk/fetch-kernels-template.yaml
@@ -71,4 +71,5 @@ spec:
             git remote remove ${NAME} || true
             git remote add ${NAME} ${REPO}
             git fetch ${NAME} ${BRANCH} --tags "+refs/heads/*:refs/heads/${NAME}/*" "+refs/tags/*:refs/tags/${NAME}/*"
+            git log -1 --format="%h %an %ad %s" ${NAME}/${BRANCH}
             git tag -f ${NAME}-head ${NAME}/${BRANCH}
