syz-cluster: fetch base kernels more often
Fetch and do build test of the base kernels 3 times per day instead
of 2.

--- a/syz-cluster/kernel-disk/fetch-kernels-cron.yaml
+++ b/syz-cluster/kernel-disk/fetch-kernels-cron.yaml
@@ -6,8 +6,8 @@ kind: CronWorkflow
 metadata:
   name: fetch-kernels-cron
 spec:
-  # Twice each day.
-  schedule: "0 */12 * * *"
+  # Three times per day.
+  schedule: "0 */8 * * *"
   concurrencyPolicy: "Replace"
   startingDeadlineSeconds: 0
   workflowSpec:
