--- a/syz-cluster/workflow/rebuild-kernels-cron.yaml
+++ b/syz-cluster/workflow/rebuild-kernels-cron.yaml
@@ -11,8 +11,8 @@ kind: CronWorkflow
 metadata:
   name: rebuild-kernels-cron
 spec:
-  # Twice each day.
-  schedule: "30 */12 * * *"
+  # Three times per day.
+  schedule: "30 */8 * * *"
   concurrencyPolicy: "Replace"
   startingDeadlineSeconds: 0
   workflowSpec:
