syz-cluster: gracefully handle abandoned packed-refs.lock
If the previous processing terminated in a non-graceful way, the lock
file remains in place and prevents further polls.

--- a/syz-cluster/kernel-disk/fetch-kernels-template.yaml
+++ b/syz-cluster/kernel-disk/fetch-kernels-template.yaml
@@ -61,6 +61,10 @@ spec:
           - "-c"
           - |
             cd /repo.git
+            if [ -f "packed-refs.lock" ]; then
+              echo "Found stale 'packed-refs.lock' at start. Removing it."
+              rm -f packed-refs.lock
+            fi
             if [ ! -d "refs" ]; then
               git init --bare
             fi
