syz-cluster: monitor the fsdevel list

--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -20,6 +20,7 @@ data:
       - linux-mm
       - linux-unionfs
       - linux-block
+      - linux-fsdevel
     emailReporting:
       name: "syzbot ci"
       sender: dashapi
