dashboard/app: add pprof handlers
These are useful for debugging of deadlocks, hangs (slowness),
and memory consumption issues.
Can be used on a local instance during development.
On the production system pprof handlers are restricted to admins only.

--- a/dashboard/app/app.yaml
+++ b/dashboard/app/app.yaml
@@ -25,7 +25,8 @@ handlers:
 - url: /static
   static_dir: dashboard/app/static
   secure: always
-- url: /(admin|cron/.*)
+# debug is for net/http/pprof handlers.
+- url: /(admin|debug|cron/.*)
   script: auto
   login: admin
   secure: always
