syz-cluster: add pkg/osutil to Docker containers
It's become necessary after #6533.

--- a/syz-cluster/tools/db-mgmt/Dockerfile
+++ b/syz-cluster/tools/db-mgmt/Dockerfile
@@ -7,6 +7,7 @@ COPY go.mod ./
 COPY go.sum ./
 RUN go mod download
 COPY pkg/gcs/ pkg/gcs/
+COPY pkg/osutil/ pkg/osutil/
 
 # Build the tool.
 COPY syz-cluster/tools/db-mgmt/*.go syz-cluster/tools/db-mgmt/
